--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "npm i -D webpack webpack-cli webpack-dev-server@next",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test:unit": "jest --watchAll"
   },
